[package]
name = "tricoder"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.70"
rayon = "1.7.0"
reqwest = { version = "0.11.16", features = ["blocking", "json"] }
serde = { version = "1.0.159", features = ["derive"] }
thiserror = "1.0.40"
tokio = { version = "1.27.0", features = ["macros"] }
trust-dns-resolver = "0.22.0"
